--- a/src/templates/image-card.hbs
+++ b/src/templates/image-card.hbs
@@ -1,25 +1,25 @@
 {{#each this}}  
-    <li>
-        <div class="photo-card">
-            <img src="{{webformatURL}}" alt="" />
-            <div class="stats">
-                <p class="stats-item">
-                    <i class="material-icons">thumb_up</i>
-                    {{likes}}
-                </p>
-                <p class="stats-item">
-                    <i class="material-icons">visibility</i>
-                    {{views}}
-                </p>
-                <p class="stats-item">
-                    <i class="material-icons">comment</i>
-                    {{comments}}
-                </p>
-                <p class="stats-item">
-                    <i class="material-icons">cloud_download</i>
-                    {{downloads}}
-                </p>
-            </div>
-        </div>
-    </li>
+    <li class="gallery__card" id ='{{id}}'>
+      <div class="gallery__container">
+          <img  src="{{webformatURL}}" alt="" />
+      </div>
+      <div class="gallery__stats">
+          <p class="stats-item">
+              <i class="material-icons">thumb_up</i>
+              {{likes}}
+          </p>
+          <p class="stats-item">
+              <i class="material-icons">visibility</i>
+              {{views}}
+          </p>
+          <p class="stats-item">
+              <i class="material-icons">comment</i>
+              {{comments}}
+          </p>
+          <p class="stats-item">
+              <i class="material-icons">cloud_download</i>
+              {{downloads}}
+          </p>
+      </div>
+  </li>
 {{/each}}
