--- a/src/sass/gallery.scss
+++ b/src/sass/gallery.scss
@@ -12,7 +12,7 @@
     padding: 20px;
     margin-bottom: 20px;
 
-    width: 500px;
+    width: 400px;
     background-color: rgb(34, 34, 32);
     box-shadow: 0px 0px 17px 5px rgba(255, 255, 255, 1);
   }
@@ -21,14 +21,18 @@
   }
   &__container {
     margin-bottom: 30px;
-    height: 310px;
-    width: 460px;
+    height: 280px;
+    width: 360px;
 
-    object-fit: cover;
     overflow: hidden;
 
     border-radius: 10px;
     box-shadow: 0px 0px 3px 3px rgb(10, 10, 10), 0px 0px 17px 3px #ffffff;
+  }
+  &__img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
   }
   &__stats {
     display: flex;
