--- a/src/templates/image-card.hbs
+++ b/src/templates/image-card.hbs
@@ -1,7 +1,7 @@
 {{#each this}}  
     <li class="gallery__card" id ='{{id}}'>
       <div class="gallery__container">
-          <img class="gallery__img" src="{{webformatURL}}" alt="" />
+          <img class="gallery__img" src="{{webformatURL}}" data-source="{{largeImageURL}}"alt="" />
       </div>
       <div class="gallery__stats">
           <p class="stats-item">
